src/css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap'); /* font buat tulisan biasa*/
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap'); /* font buat h1 hero */

/* jadi ini di import dua kali, nah manggilnya nanti sesuai urutan */
* {
    font-family: 'Poppins', sans-serif; /*ini manggil yang poppins weight 500 (yang di import pertama) */
    font-style: normal;
    text-decoration: none !important;
}
h1{
    font-family: 'Poppins', sans-serif; /*ini manggil yang poppins weight 700 (yang di import kedua) */
}
/* ========== Navbar ========== */
navbar{
    padding: 30px 128px;
    
}
navbar li{
    margin: 0 20px;
    font-size: 10px;
    font-size: 18px;    
}
navbar a:hover{
    color: #EB5757 !important;
}
.header{
    font-size: 10px;
    font-size: 18px;
}

.btn-login{
    background-color: #EB5757 !important;
    width: 105px;
    height: 44px;
    border: none;
    font-size: 18px;
    color: rgb(255, 255, 255);
}

.btn-login:hover{
    background-color: #fc7e7e !important;
}

/* ========== HERO ========== */
.hero{
    margin-top: 50px;
}
.hero p{
    color: #828282;
    text-align: center;
}
.hero h1{
    font-weight: 600;
    font-size: 144px;
    color: #EB5757;
}
.hero h1 span{
    color:#222222;
}
.btn-explore{    
    width: 215px;
    height: 69px;
    left: 613px;
    top: 516px;
    background: #222222;
    border-radius: 41.5px;
    font-size: 24px;
    text-align: center;
    color: rgb(255, 255, 255);
    margin-top: 34px;
}
.btn-explore:hover{
    color: rgb(173, 173, 173);
}
.subtitle{
    margin-bottom: -18px;
}
/* ========== FOOTER ========== */
footer{
    font-size: 18px;
    padding-top: 100px;
    background-color: #f2f2f2;
}
.footer-all{
    margin-top: 70px; 
}
.footer .text-center p-4{
    background-color: rgba(0, 0, 0, 0.05);
}
.footer-all a:hover{
    color: #EB5757 !important;
}
.footer-all a{
    line-height: 27px;
}
.footer-all .App-logo{
    margin-bottom: 20px ;
}
.footer-all h6{ 
    font-size:larger;
    color: #333333;
}
.footer-all img{
    width: 170px;
    height: auto;
}
copyright{
    padding: 30px 128px;
    margin-top: 60px;
}
copyright a{
    color: #828282;
}

/* ========= Content Mengenal + Perkenalan Toko Online + Video + bergabung =========*/
.kotak-mengenal{
    max-width: 80%;
}
.content-img{
    margin-bottom: 70px;
}
.icon-mengenal{
    width: 50px;
    height: 90px;
    background: #FFFFFF;
    box-shadow: 6px 8px 29px rgba(0, 0, 0, 0.1);
    border-radius: 25px;
    margin: 20px 40px;
    margin-left: 0;
}
.content-img h2{
    margin-top: 100px;
    font-weight: 500;
    font-size: 36px;
    line-height: 20px;
    color: #828282;
}
.content-img h1{
    font-weight: bold;
    font-size: 64px;
    line-height: 80px;
    color: #222222;
}
.content-img span{
    color: #EB5757
}
.content-img p{
    font-weight: 500;
    font-size: 18px;
    line-height: 30px;
    text-align: justify;
    color: #828282;
    max-width: 500px;
}
.icon-mengenal embed{
    width: 80px; 
    padding-top: 5px;   
}
.icon-twitter{
    margin-top: 9px;          
}
.icon-tiktok{
    padding-left: 6px;
    height: 80px;
}
.content-img button{
        background-color: #EB5757 !important;
        width: 195px;
        height: 55px;
        border: none;
        font-size: 18px;
        color: rgb(255, 255, 255);
        margin-top: 25px;
}

/* =========== Video =========== */
.content-img iframe{
    margin-top: 70px;
    border-radius: 20px;
    height: 450px;
    width: 700px;
}

/* =========== Bergabung ======== */
.box-bergabung h2{
    height: 31px;
    font-size: 18px;
    line-height: 20px;
    color: #000000;
    margin-top: 25px;
    text-align: center;
}
.box-bergabung p{
    font-size: 14px;
    line-height: 21px;
    color: #828282;
    margin-top: 0;
    text-align: center;
    max-width: 350px;
}

.img-bergabung{
    height: 180px;
    width: 180px;
}
.box-bergabung{
    width: 190px;
    height: 220px;
    margin: 70px 40px;
    margin-left: 0;
    text-align: center;
}
.bergabung-title{
    margin-top: 20px !important;
}
/* ============= Landing Page - Blog ============= */
.landing-blog{
    margin-top: 200px;
}
.landing-blog h1{
    font-weight:bolder;
    font-size: 64px;
    line-height: 96px;
    color: #222222;
}
.landing-blog span{
    color: #EB5757;
}
.landing-blog p{
    color:#828282;
    margin: 3px 230px;
}
.landing-blog .btn-blog{
    background-color: #EB5757 !important;
    width: 195px;
    height: 55px;
    border: none;
    font-size: 18px;
    color: rgb(255, 255, 255);
    margin-top: 25px;
}

/* ============== Big-img ============== */

